[gd_scene load_steps=2 format=2]

[ext_resource path="res://assets/Romanium/GUI.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.985016
margin_right = 0.984985
script = ExtResource( 1 )

[node name="HSlider" type="HSlider" parent="."]
margin_left = 37.0
margin_top = 669.0
margin_right = 1241.0
margin_bottom = 685.0
grow_horizontal = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayPause" type="Button" parent="."]
margin_left = 81.2498
margin_top = 697.225
margin_right = 114.25
margin_bottom = 734.225
rect_pivot_offset = Vector2( 43.5, 37 )
text = "||"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SeekForward" type="Button" parent="."]
margin_left = 125.612
margin_top = 697.225
margin_right = 158.612
margin_bottom = 734.225
rect_pivot_offset = Vector2( 43.5, 37 )
text = ">|"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SeekPrevious" type="Button" parent="."]
margin_left = 37.8316
margin_top = 696.281
margin_right = 70.8316
margin_bottom = 733.281
rect_pivot_offset = Vector2( 43.5, 37 )
text = "|<"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 179.625
margin_top = 711.664
margin_right = 279.625
margin_bottom = 734.664
text = "0 Â· 0"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="pressed" from="SeekForward" to="." method="_on_SeekForward_pressed"]
[connection signal="pressed" from="SeekPrevious" to="." method="_on_SeekPrevious_pressed"]
